Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1531

C epoll proactor listener cleanup race

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-c-0.18.0
    • proton-c-0.19.0
    • proton-c
    • None

    Description

      It is possible that closing a listener while an incoming connection is about to trigger an epoll event on the listener can result in accessing free'd memory.

      The solution is to force an event event to fire via a shutdown() call on the socket and delay deletion until the callback completes. This strategy is already in use by the pconnection cleanup logic, which can be used as a template.

      Attachments

        Activity

          People

            cliffjansen Clifford Jansen
            cliffjansen Clifford Jansen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: