PROTON-1531: epoll proactor: use shutdown to avoid race on close